<?xml version="1.0"?>
<package>
  <name>imu_bno085</name>
  <version>2.0.0</version>
  <description>I2C driver for a BNO085 IMU. </description>
  <maintainer email="ben@calc-i.com">bsewell</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
